--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3115,6 +3115,7 @@
     padding: 24px;
     width: 100%;
     max-width: 520px;
+    min-width: 520px;
     margin-left: auto;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
@@ -3182,6 +3183,68 @@ input[type="color"] {
     width: 100%;
 }
 
-.w20{
+.w20 {
     width: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.btn-regular.is-loading {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-regular.is-loading:after {
+    content: "";
+    z-index: 9;
+    width: 100%;
+    height: 100%;
+    background-color: var(--Grey-5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    inset: 0;
+}
+
+.btn-regular.is-loading:before {
+    content: "";
+    border: .2em solid currentcolor;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    animation: 1s loader linear infinite;
+    z-index: 11;
+    width: 10px;
+    height: 10px;
+    -webkit-animation: 1s loader linear infinite;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+
+@keyframes loader {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
