--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -72,6 +72,7 @@
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
     background-color: var(--Grey);
+    /* overflow: hidden; */
 }
 
 .table-header {
