shimmer-effect-in-list, profile-image-change in-header,fix-email-validation, add-single-form-remove-accordion

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -997,7 +997,8 @@ body {
 }
 
 .btn-regular:focus {
-    background-color: var(--Grey-5);
+    background-color: black;
+    color: white;
 }
 
 button:focus {
