some change in responsive

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -363,7 +363,7 @@
         width: 100%;
     }
 
-    .custom-dropdown-list.leftside {
+    .custom-dropdown-list {
         transform: none;
         left: auto;
         right: 100%;
